# conan-barbarian

./: .gitignore  README.md  libshelper.py  pyproject.toml  test_libshelper.py
src/conan_barbarian/: data.py  graphs.py  libshelper.py  scraping.py
tests/: test_data.py  test_functions.py  test_graph.py  test_scraping.py
